# flow_ts_fork

./: .gitignore  AGENTS.md  CLI_ARGUMENTS_REFERENCE.md  COMPLETION_STATUS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SYNTHETIC_FCS_ANALYSIS.md  TESTING_INSTRUCTIONS.md  package.json  vite.config.ts
.github/workflows/: rust.yml
fcs/: CHANGELOG.md  Cargo.toml  README.md
fcs/benches/: matrix_operations.rs
fcs/examples/: test_unmixed_fcs.rs
fcs/src/: datatype.rs  file.rs  header.rs  lib.rs  matrix.rs  metadata.rs  tests.rs  transform.rs  write.rs
fcs/src/keyword/: mod.rs  parsing.rs  tests.rs
flow-fcs/: CHANGELOG.md  Cargo.toml
flow-fcs/src/: file.rs  header.rs  metadata.rs  transform.rs
flow-fcs/src/keyword/: helpers.rs  mod.rs  parsing.rs
flow-plots/: Cargo.toml  README.md
flow-plots/src/: colormap.rs  density.rs  executor.rs  lib.rs  plot_types.rs  tests.rs
flow-plots/src/render/: progress.rs
gates/: CHANGELOG.md  Cargo.toml  GPU_PERFORMANCE_FINDINGS.md
gates/examples/: visualize_synthetic_data.rs
gates/src/: error.rs  gatingml.rs  hierarchy.rs  lib.rs  plotmap.rs  statistics.rs  types.rs
gates/src/automated/: IMPLEMENTATION_STATUS.md  README.md  RESEARCH_NOTES.md  comparison.rs  doublets.rs  interactive.rs  mod.rs  scatter.rs
gates/src/filtering/: cache.rs  mod.rs
gates/src/geometry/: construction.rs
gates/src/gpu/: filter.rs
gates/tests/: automated_gating.rs  test_helpers.rs
peacoqc-cli/: CHANGELOG.md  Cargo.toml  README.md
peacoqc-cli/src/: main.rs
peacoqc-rs/: CHANGELOG.md  Cargo.toml  DEV_NOTES.md  README.md
peacoqc-rs/examples/: basic_usage.rs  tauri_command.rs
peacoqc-rs/src/: error.rs  lib.rs
peacoqc-rs/src/qc/: consecutive.rs  doublets.rs  export.rs  isolation_tree.rs  mad.rs  margins.rs  mod.rs  monotonic.rs  peacoqc.rs  peaks.rs  plots.rs
plots/: CHANGELOG.md  Cargo.toml
plots/src/: lib.rs  signal_heatmap.rs
plots/src/options/: mod.rs  spectral.rs
plots/src/plots/: density.rs  mod.rs  spectral.rs  traits.rs
plots/src/render/: mod.rs  plothelper.rs  plotmap.rs  plotters_backend.rs
src/: build-search-index.ts  extract-benchmarks.ts  extract-feature-history.ts  metadata.rs
src-tauri/scripts/: convert_plots_to_log_scale.py
src-tauri/src/fcs/: file.rs  mod.rs
src/keyword/: mod.rs
src/routes/: +page.svx
src/routes/(app)/docs/performance/parallelization-threshold/: +page.svx
static/: benchmark-metadata.json
tru-ols/: CHANGELOG.md  COMPARISON_WITH_JULIA.md  Cargo.toml  DEV_NOTES.md  PEAK_DETECTION_VALIDATION.md  Synergy of AutoSpectral and TRU-OLS in Single-Cell Unmixing.md  TRU-OLS vs AutoSpectral Analysis.md  UNMIXING_RESULTS_PLATE001.md  VALIDATION_REPORT.md
tru-ols-cli/: CHANGELOG.md  CLI_ARGUMENTS_REFERENCE.md  Cargo.toml  README.md
tru-ols-cli/examples/: COMPARISON_README.md  QUICK_START_COMPARISON.md  check_unmixed.rs  compare_with_julia.rs  create_mixing_matrix_csv.rs  csv_to_fcs.rs  export_mixing_matrix.rs  generate_synthetic_test_data.rs  process_compensation_controls.rs  test_concentrated_heatmap.rs  test_fcs_read.rs
tru-ols-cli/src/: config.rs  lib.rs  main.rs  output.rs  synthetic_data.rs
tru-ols-cli/tests/: test_peak_detection.rs
tru-ols/benches/: unmixing_benchmark.rs
tru-ols/src/: error.rs  fcs_integration.rs  lib.rs  plotting.rs  preprocessing.rs  unmixing.rs
tru-ols/tests/: integration_tests.rs  real_world_data.rs  synthetic_data.rs
utils/: CHANGELOG.md  CRATE_RESEARCH.md  Cargo.toml  README.md
utils/src/: lib.rs
utils/src/clustering/: dbscan.rs  gmm.rs  kmeans.rs  mod.rs
utils/src/common/: mod.rs
utils/src/kde/: fft.rs  gpu.rs  kde2d.rs  mod.rs
utils/src/pca/: mod.rs
