[package]
name="peacoqc-cli"
version= "0.2.0"
edition.workspace=true
authors.workspace=true
license.workspace=true
description="Command-line tool for PeacoQC flow cytometry quality control"
repository="https://github.com/jrmoynihan/flow/peacoqc-cli"
keywords=[
    "flow-cytometry",
    "quality-control",
    "bioinformatics",
    "command-line",
]
categories=["science", "command-line-utilities"]

[[bin]]
name="peacoqc"
path="src/main.rs"

[dependencies]
flow-fcs={ path="../fcs", version= "^0.2.1" }
peacoqc-rs={ path="../peacoqc-rs", version= "^0.2.0", features=[
    "flow-fcs",
    "gpu",
] }
anyhow.workspace=true
serde_json.workspace=true
clap = { workspace = true }
indicatif = { workspace = true }
rayon.workspace=true
walkdir="2.5"
tracing.workspace=true
tracing-subscriber={ workspace=true }
dialoguer="0.12"

[package.metadata.scripts]
test       ="cargo test"
dry-release="cargo smart-release peacoqc-cli --update-crates-index"
publish    ="cargo smart-release peacoqc-cli --update-crates-index --execute"
changelog  ="cargo changelog peacoqc-cli --write"
