[package]
name="flow-plots"
version="0.2.0"
edition.workspace=true
authors.workspace=true
repository="https://github.com/jrmoynihan/flow/plots"
license="MIT"
description="Package for drawing and interacting with plots in flow cytometry data"
keywords=[
    "flow-cytometry",
    "bioinformatics",
    "science",
    "visualization",
    "plots",
]
categories=["science", "visualization"]

[features]
default=[]

[dependencies]
colormap      ="0.0.2"
colorgrad     ={ version="0.8", features=["preset"] }
derive_builder={ workspace=true }
flow-fcs      ={ path="../fcs", version="^0.2.0" }
image = { workspace = true }
plotters = { workspace = true }
anyhow        ={ workspace=true }
rustc-hash    ={ workspace=true }
serde         ={ workspace=true, features=["derive"] }
ts-rs         ={ workspace=true }
once_cell     ="1.20"
rayon         ={ workspace=true }
num-traits    ="0.2"

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name   ="batch_density"
harness=false

[package.metadata.scripts]
test       ="cargo test"
dry-release="cargo smart-release flow-plots --update-crates-index"
publish    ="cargo smart-release flow-plots --update-crates-index --execute"
changelog  ="cargo changelog flow-plots --write"
