[package]
name = "flow-tru-ols-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository = "https://github.com/jrmoynihan/flow/tru-ols-cli"
license = "MIT"
description = "Command-line tool for TRU-OLS flow cytometry unmixing"
keywords = [
    "flow-cytometry",
    "unmixing",
    "compensation",
    "bioinformatics",
    "command-line",
]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "tru-ols"
path = "src/main.rs"

[[example]]
name = "generate_synthetic_test_data"
path = "examples/generate_synthetic_test_data.rs"

[dependencies]
flow-fcs = { path = "../fcs", version = "^0.2.0" }
flow-tru-ols = { path = "../tru-ols", version = "^0.1.0", features = ["flow-fcs", "plotting"] }
flow-plots = { path = "../plots", version = "^0.2.0" }
flow-utils = { path = "../utils", version = "^0.1.0" }
flow-gates = { path = "../gates", version = "^0.2.0" }
peacoqc-rs = { path = "../peacoqc-rs", version = "^0.2.0", features = ["flow-fcs"] }
polars = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { version = "4.5.54", features = ["derive", "cargo"] }
indicatif = "0.18.3"
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ndarray = { workspace = true }
faer = { workspace = true }
faer-ext = { workspace = true }
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
plotters = "0.3.7"
image = "0.25.9"

[package.metadata.scripts]
test = "cargo test"
dry-release = "cargo smart-release flow-tru-ols-cli --update-crates-index"
publish = "cargo smart-release flow-tru-ols-cli --update-crates-index --execute"
changelog = "cargo changelog flow-tru-ols-cli --write"
