[package]
name = "flow-tru-ols"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository = "https://github.com/jrmoynihan/flow/tru-ols"
license = "MIT"
description = "TRU-OLS (Truncated ReUnmixing OLS) algorithm for flow cytometry unmixing"
keywords = [
    "flow",
    "cytometry",
    "unmixing",
    "compensation",
    "bioinformatics",
    "science",
]
categories = ["science", "algorithms"]

[features]
default = ["flow-fcs"]
flow-fcs = ["dep:flow-fcs", "dep:polars"]
plotting = ["dep:flow-plots", "flow-fcs"]

[dependencies]
flow-fcs = { path = "../fcs", version = "^0.2.0", optional = true }
flow-plots = { path = "../plots", version = "^0.2.0", optional = true }
polars = { workspace = true, optional = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand = { workspace = true }

[package.metadata.scripts]
test = "cargo test"
dry-release = "cargo smart-release flow-tru-ols --update-crates-index"
publish = "cargo smart-release flow-tru-ols --update-crates-index --execute"
changelog = "cargo changelog flow-tru-ols --write"
